# AIAdminUI

./: .gitignore  docker-compose.prod.yml  docker-compose.yml  plan.md  railway.toml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/routes/: __init__.py  auth.py  credentials.py  health.py  mcp.py  repos.py  sessions.py
backend/app/api/websocket/: terminal.py
backend/app/models/: __init__.py  claude_credentials.py  database.py  repository.py  user.py
backend/app/services/: __init__.py  claude_service.py  crypto_service.py  git_service.py  github_oauth.py  mcp_service.py  permission_service.py  vercel_service.py
backend/scripts/: init-claude.sh
frontend/: Dockerfile  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(auth)/callback/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/repos/: page.tsx
frontend/src/app/(dashboard)/session/[id]/: page.tsx
frontend/src/app/(dashboard)/settings/: page.tsx
frontend/src/components/chat/: CommandPalette.tsx  ModeIndicator.tsx  PermissionDialog.tsx  PlanPanel.tsx  SlashCommandMenu.tsx  ToolUseDisplay.tsx
frontend/src/components/settings/: ClaudeCredentials.tsx  MCPSettings.tsx
frontend/src/components/ui/: scroll-area.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts  commands.ts
frontend/src/stores/: auth.ts  mode.ts  permissions.ts  repository.ts  session.ts
scripts/: init-claude.sh  setup.sh  start.sh  stop.sh
